--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "jspm": {
+    "jspmNodeConversion": false,
+    "format": "es6",
+    "dependencies": {
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/timurtu/systemjs-router.git"
