--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "systemjs-router",
   "version": "1.0.8",
   "description": "A framework agnostic SystemJS template router.",
-  "main": "src/Router.js",
+  "main": "dist/Router.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,9 @@
   },
   "homepage": "https://github.com/timurtu/systemjs-router#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "jspm": "^0.16.31"
   }
 }
